--- a/Grid4.html
+++ b/Grid4.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Boostrap and the Grids: Home</title>
+    <title>Boostrap and the Grids: Grid 4</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,14 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     
-    <!-- Home Page Font -->
-    <link rel="stylesheet" href="https://use.typekit.net/mhj5wdi.css">
-
     <!-- CSS -->
     <link href="/css/site.css" rel="stylesheet">
 </head>
 
-<body class="d-flex flex-column h-100 homeBG">
+<body class="d-flex flex-column h-100">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -30,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Grid1.html">Grid 1</a>
@@ -42,7 +39,7 @@
                     <a class="nav-link" href="/Grid3.html">Grid 3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Grid4.html">Grid 4</a>
+                    <a class="nav-link active" aria-current="page" href="/Grid4.html">Grid 4</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Grid5.html">Grid 5</a>
@@ -59,15 +56,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Grid9.html">Grid 9</a>
                 </li>
-            </ul> 
+            </ul>
         </div>
     </div>
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container text-center mt-5">
-           <h1 class="text-center display-1 homeText">Bootstrap and the Grids</h1>
-           <h3 class="text-white">An Exercise in Bootstrap Grid Layouts</h3>
+       <div class="container">
            
        </div>
     </main>
