--- a/Grid1.html
+++ b/Grid1.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Boostrap and the Grids: Home</title>
+    <title>Boostrap and the Grids: Grid 1</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,14 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     
-    <!-- Home Page Font -->
-    <link rel="stylesheet" href="https://use.typekit.net/mhj5wdi.css">
-
     <!-- CSS -->
     <link href="/css/site.css" rel="stylesheet">
 </head>
 
-<body class="d-flex flex-column h-100 homeBG">
+<body class="d-flex flex-column h-100">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -30,10 +27,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Grid1.html">Grid 1</a>
+                    <a class="nav-link active" aria-current="page" href="/Grid1.html">Grid 1</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Grid2.html">Grid 2</a>
@@ -59,16 +56,29 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Grid9.html">Grid 9</a>
                 </li>
-            </ul> 
+            </ul>
         </div>
     </div>
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container text-center mt-5">
-           <h1 class="text-center display-1 homeText">Bootstrap and the Grids</h1>
-           <h3 class="text-white">An Exercise in Bootstrap Grid Layouts</h3>
-           
+       <div class="container h-100 minHeight">
+           <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
+               <div class="col">
+                   <div class="bg-dark text-light h-100 p-3">
+                       <h1>Column 1</h1>
+                       <p><p>Lorem ipsum dolor sit amet. Et sunt sapiente eum officiis omnisaut quod qui neque ipsum. Id neque quos ut consequatur pariaturaut magnam. </p><p>Aut exercitationem quaerat et fugiat praesentium ea facilis reiciendis? A rerum quia ad aperiam fugit <em>Et fugiat est quaerat minima et esse molestiae et laudantium distinctio</em> id enim dolores! Et sunt asperiores <strong>Sit fugit et nostrum laborum et voluptatibus necessitatibus</strong> ut amet voluptatibus eos fuga optio. Est minima esse et quis voluptatem et accusantium ratione ea dolores quia id ipsam deleniti ut quidem necessitatibus vel quasi reprehenderit. </p><p>Aut tenetur alias <strong>Ut nisi ut quisquam magni eum provident mollitia</strong> ex consequatur nihil est unde expedita et consequatur corporis. Et fugiat cupiditate eos maxime consectetur <em>Vel soluta aut perspiciatis blanditiis qui quia laboriosam</em>. </p>
+                    </p>
+                   </div>
+               </div>
+               <div class="col">
+                   <div class="bg-secondary text-light h-100 p-3">
+                       <h1>Column 2</h1>
+                       <p><p>Lorem ipsum dolor sit amet. Et sunt sapiente eum officiis omnisaut quod qui neque ipsum. Id neque quos ut consequatur pariaturaut magnam. </p><p>Aut exercitationem quaerat et fugiat praesentium ea facilis reiciendis? A rerum quia ad aperiam fugit <em>Et fugiat est quaerat minima et esse molestiae et laudantium distinctio</em> id enim dolores! Et sunt asperiores <strong>Sit fugit et nostrum laborum et voluptatibus necessitatibus</strong> ut amet voluptatibus eos fuga optio. Est minima esse et quis voluptatem et accusantium ratione ea dolores quia id ipsam deleniti ut quidem necessitatibus vel quasi reprehenderit. </p><p>Aut tenetur alias <strong>Ut nisi ut quisquam magni eum provident mollitia</strong> ex consequatur nihil est unde expedita et consequatur corporis. Et fugiat cupiditate eos maxime consectetur <em>Vel soluta aut perspiciatis blanditiis qui quia laboriosam</em>. </p>
+                    </p>
+                   </div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
