Grid 3 and 3B and Updated Typos
Updated typos throughout all GridX.html files and edited code for Grid3 and Grid3B

--- a/Grid5.html
+++ b/Grid5.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Boostrap and the Grids: Grid 5</title>
+    <title>Bootstrap and the Grids: Grid 5</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
