--- a/Grid1.html
+++ b/Grid1.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Boostrap and the Grids: Grid 1</title>
+    <title>Bootstrap and the Grids: Grid 1</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,14 +66,14 @@
            <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
                <div class="col">
                    <div class="bg-dark text-light h-100 p-3">
-                       <h1>Column 1</h1>
+                       <h1 class="fw-lighter text-decoration-underline">Column 1</h1>
                        <p><p>Lorem ipsum dolor sit amet. Et sunt sapiente eum officiis omnisaut quod qui neque ipsum. Id neque quos ut consequatur pariaturaut magnam. </p><p>Aut exercitationem quaerat et fugiat praesentium ea facilis reiciendis? A rerum quia ad aperiam fugit <em>Et fugiat est quaerat minima et esse molestiae et laudantium distinctio</em> id enim dolores! Et sunt asperiores <strong>Sit fugit et nostrum laborum et voluptatibus necessitatibus</strong> ut amet voluptatibus eos fuga optio. Est minima esse et quis voluptatem et accusantium ratione ea dolores quia id ipsam deleniti ut quidem necessitatibus vel quasi reprehenderit. </p><p>Aut tenetur alias <strong>Ut nisi ut quisquam magni eum provident mollitia</strong> ex consequatur nihil est unde expedita et consequatur corporis. Et fugiat cupiditate eos maxime consectetur <em>Vel soluta aut perspiciatis blanditiis qui quia laboriosam</em>. </p>
                     </p>
                    </div>
                </div>
                <div class="col">
                    <div class="bg-secondary text-light h-100 p-3">
-                       <h1>Column 2</h1>
+                       <h1 class="fw-lighter text-decoration-underline">Column 2</h1>
                        <p><p>Lorem ipsum dolor sit amet. Et sunt sapiente eum officiis omnisaut quod qui neque ipsum. Id neque quos ut consequatur pariaturaut magnam. </p><p>Aut exercitationem quaerat et fugiat praesentium ea facilis reiciendis? A rerum quia ad aperiam fugit <em>Et fugiat est quaerat minima et esse molestiae et laudantium distinctio</em> id enim dolores! Et sunt asperiores <strong>Sit fugit et nostrum laborum et voluptatibus necessitatibus</strong> ut amet voluptatibus eos fuga optio. Est minima esse et quis voluptatem et accusantium ratione ea dolores quia id ipsam deleniti ut quidem necessitatibus vel quasi reprehenderit. </p><p>Aut tenetur alias <strong>Ut nisi ut quisquam magni eum provident mollitia</strong> ex consequatur nihil est unde expedita et consequatur corporis. Et fugiat cupiditate eos maxime consectetur <em>Vel soluta aut perspiciatis blanditiis qui quia laboriosam</em>. </p>
                     </p>
                    </div>
@@ -81,7 +81,7 @@
            </div>
        </div>
     </main>
-    <footer class="footer mt-auto py-3 bg-dark sticky-footer">
+    <footer class="footer mt-auto mb-0 py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids by TJ Longshore</span>
         </div>
