--- a/Grid2.html
+++ b/Grid2.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Boostrap and the Grids: Grid 2</title>
+    <title>Bootstrap and the Grids: Grid 2</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,8 +62,19 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <div class="row h-100">
+               <div class="col-3">
+                   <div class="bg-secondary text-light h-100 p-3">
+                       <h5 class="fw-light">Side Nav</h5>
+                    </div>
+               </div>
+               <div class="col-9">
+                   <div class="bg-dark text-light h-100 p-3">
+                       <h5 class="fw-light">Main Content</h5>
+                    </div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
