--- a/Grid3b.html
+++ b/Grid3b.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Bootstrap and the Grids: Grid 3</title>
+    <title>Bootstrap and the Grids: Grid 3B</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,9 +15,8 @@
     <link href="/css/site.css" rel="stylesheet">
 </head>
 
-<body class="d-flex flex-column h-100">
-
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<body class="d-flex flex-column h-100 ">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Bootstrap Grids</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -63,41 +62,54 @@
 
     <main class="flex-shrink-0">
        <div class="container vh-100 minHeight">
-           <ul class="nav nav-pills mb-1">
-               <li class="nav-item">
-                   <a href="Grid3.html" class="nav-link active" aria-current="page">Grid 3</a>
-               </li>
-               <li class="nav-item">
-                   <a href="Grid3b.html" class="nav-link">Grid 3B</a>
-               </li>
-           </ul>
+        <ul class="nav nav-pills mb-1">
+            <li class="nav-item">
+                <a href="Grid3.html" class="nav-link">Grid 3</a>
+            </li>
+            <li class="nav-item">
+                <a href="Grid3b.html" class="nav-link active" aria-current="page">Grid 3B</a>
+            </li>
+        </ul>
            <div class="row h-100">
                <!-- LEFT COLUMN -->
-               <div class="col-7 h-100">
-                   <div class="bg-secondary text-light p-2 h-100">
+               <div class="col-7 h-100 mb-">
+                   <div class="bg-secondary text-light p-2 h-100 overflow-auto">
                     <h1>Article Title</h1>
+                    <p>Lorem ipsum dolor sit amet. Eos similique possimus sit voluptatem cumque et enim vitae et voluptas quis eum beatae laudantium. 33 veritatis iusto in nobis velit aut itaque inventore est ipsam maiores et ratione nesciunt. Ut galisum sunt ex sint autemqui porro vel rerum nemo est molestiae itaque. Et soluta iste ab consequatur tempore non aperiam dolore sit harum possimus ut saepe tempora. </p>
+                    <p>Lorem ipsum dolor sit amet. Eos similique possimus sit voluptatem cumque et enim vitae et voluptas quis eum beatae laudantium. 33 veritatis iusto in nobis velit aut itaque inventore est ipsam maiores et ratione nesciunt. Ut galisum sunt ex sint autemqui porro vel rerum nemo est molestiae itaque. Et soluta iste ab consequatur tempore non aperiam dolore sit harum possimus ut saepe tempora. </p>
                     <p>Lorem ipsum dolor sit amet. Eos similique possimus sit voluptatem cumque et enim vitae et voluptas quis eum beatae laudantium. 33 veritatis iusto in nobis velit aut itaque inventore est ipsam maiores et ratione nesciunt. Ut galisum sunt ex sint autemqui porro vel rerum nemo est molestiae itaque. Et soluta iste ab consequatur tempore non aperiam dolore sit harum possimus ut saepe tempora. </p>
                    </div>
                </div>
                <!-- RIGHT COLUMN -->
-               <div class="col-5 h-100 d-flex flex-column justify-content-evenly">
+               <div class="col-5 h-100">
                    <!-- RIGHT TOP COLUMN-->
-                   <div class="bg-dark text-light p-2 h-50">
-                    <p>Lorem ipsum dolor sit amet. Eos similique possimus sit voluptatem cumque et enim vitae et voluptas quis eum beatae laudantium. 33 veritatis iusto in nobis velit aut itaque inventore est ipsam maiores et ratione nesciunt. Ut galisum sunt ex sint autemqui porro vel rerum nemo est molestiae itaque. Et soluta iste ab consequatur tempore non aperiam dolore sit harum possimus ut saepe tempora. </p>
+                   <div class="bg-secondary text-light p-2">
+                       <form class="d-flex">
+                           <input class="form-control me-2" type="search" placeholder="search" aria-label="search">
+                           <button class="btn btn-outline-light" type="submit">Search</button>
+                       </form>
+                   
                    </div>
                    <!-- RIGHT BOTTOM COLUMN-->
-                   <div class="bg-dark text-light p-2 h-50 mt-2 overflow-auto">
-                    <p>Lorem ipsum dolor sit amet. Quo perferendis quosqui ipsa aut voluptatibus voluptates. Aut dolore animi ut placeat sint <em>Ab deleniti et quia numquam rem rerum magni sit voluptatem quis</em> sed accusamus debitis! In nesciunt autem ut quasi cupiditate hic optio nihil qui dolor consequatur ut incidunt quis a dolores voluptatem! Est corrupti sint qui earum nostrum in odit quaerat eos distinctio reprehenderit sed adipisci voluptas sed deserunt sapiente. </p><p>Ab minima possimus et porro numquam <strong>Id incidunt et sapiente error</strong> rem laboriosam modi in vitae expedita  tenetur quasi. Non animi velit et reiciendis ipsa aut eius voluptates rem tempora nihil. Ex omnis adipisci <em>Et corrupti aut quibusdam ipsa</em>! </p><p>Sed magni ratione <strong>Sed velit et aliquid culpa aut minus voluptas</strong> aut iusto dignissimos 33 animi doloribus? Sit quasi quaerat <em>Aut totam</em> qui deserunt atque hic ipsam eligendi. Ut facere galisum eum voluptatem tenetur qui dolorem accusamus. </p>
-
-                   </div>
-                   <div class="bg-dark text-light border border-top p-2">
-                       <button class="btn btn-light" type="button">Read More</button>
+                   <div class="bg-dark text-light p-2 mt-2">
+                       <h5>More Articles</h5>
+                       <ul class="nav flex-column">
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Article One</a>
+                           </li>
+                           <li class="nav-item">
+                            <a class="nav-link" href="#">Article Two</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="#">Article Three</a>
+                            </li>
+                       </ul>
                    </div>
                </div>
            </div>
        </div>
     </main>
-    <footer class="footer mt-auto py-2 bg-dark sticky-footer">
+    <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids by TJ Longshore</span>
         </div>
