--- a/Grid4.html
+++ b/Grid4.html
@@ -62,8 +62,24 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <div class="row h-100 row-cols-1 row-cols-md-3 gy-3">
+               <div class="col">
+                   <div class="bg-secondary text-light text-center h-100 pt-2">
+                       Column One
+                   </div>
+               </div>
+               <div class="col">
+                   <div class="bg-dark text-light text-center h-100 pt-2">
+                       Column Two
+                   </div>
+                </div>
+                <div class="col">
+                   <div class="bg-secondary text-light text-center h-100 pt-2">
+                       Column Three
+                   </div>
+                </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
