--- a/Grid5.html
+++ b/Grid5.html
@@ -62,8 +62,24 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <div class="row h-100 row-cols-1 row-cols-md-3 gy-3">
+               <div class="col-md-3 order-last order-md-first">
+                   <div class="bg-secondary text-light h-100 text-center">
+                       Column One
+                    </div>
+               </div>
+               <div class="col-md-6">
+                   <div class="bg-dark text-light h-100 text-center">
+                       Column Two
+                   </div>
+               </div>
+                <div class="col-md-3 order-first order-md-last">
+                    <div class="bg-secondary text-light h-100 text-center">
+                        Column Three
+                    </div>
+                </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
