--- a/Grid6.html
+++ b/Grid6.html
@@ -62,8 +62,24 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <div class="row h-100 g-4 row-cols-1 row-cols-md-2">
+               <div class="col col-md-12">
+                   <div class="bg-secondary text-light h-100">
+                       Column One
+                   </div>
+               </div>
+               <div class="col col-md-6 order-last">
+                   <div class="bg-dark text-light h-100">
+                       Column Two
+                   </div>
+               </div>
+               <div class="col col-md-6">
+                   <div class="bg-secondary text-light h-100">
+                       Column Three
+                   </div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
